--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "SolidJS plugin for Tawk messenger",
+  "main": "./dist/solid-tawk-messenger.umd.js",
   "scripts": {
     "start": "vite",
     "dev": "vite",
